correct bug : if the content is too long in the portlet, the background goes wrong : it's corrected now.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/core@13407 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/themes/black/css/page_template_styles.css
+++ b/webapp/themes/black/css/page_template_styles.css
@@ -48,7 +48,7 @@ body {
 }
 .portlet-background-content {
 	background-image: url("../images/local/skin/portlet_background2.png");
-	background-color: #fff;
+	background-color: #606060;
 	background-repeat: repeat-x;
 	padding:1em;
 }
